@@ -1,5 +1,16 @@
 2009-06-18  Sverker Nilsson  <sverker@sverker-laptop>
 
+	* specs/index.gsl: Changed wording of tested pythons to not having
+	tested with python2.3 in 32 bit mode.
+
+	* src/sets/bitset.c (bits_first,bits_last): Changed to use #if
+	directive to get rid of warnings in 32-bit mode.
+
+	* src/sets/bitset.h (NyBits_N): Changed definition to use
+	ULONG_MAX to be able to use it in preprocessor #if directive.
+
+	* README (TEST): changed sample output to begin with test of sets.
+
 	* setup.py (doit): long_description now starts with newline to
 	look better in PKG-INFO
 
